--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "devDependencies": {
     "coveralls": "^3.0.9",
     "jest": "^24.9.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   }
 }
