--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/vivitek/backend#readme",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.3",
     "coveralls": "^3.0.9",
     "jest": "^24.9.0"
   },
