--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb-memory-server": "^6.0.1",
     "mongoose": "^5.7.13",
     "morgan": "^1.9.1"
   }
