--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "coveralls": "jest "
+    "coveralls": "jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
