--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "## the all-knowing service for configurating your router",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "coveralls": "jest --detectOpenHandles"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
