--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## the all-knowing service for configurating your router",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --forceExit --detectOpenHandles --maxWorkers=10"
   },
   "repository": {
     "type": "git",
