--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^6.0.1",
     "mongoose": "^5.7.13",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "socket.io": "^2.3.0"
   }
 }
