--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: "3"
 services: 
     server:
         build: ./server
+        depends_on: 
+            - mongo
+            - rabbit
         ports: 
             - "8080:5000"
     mongo:
