--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ before_install:
 install:
 - cd server; npm install
 script:
-- cd server; npm test; npm run coveralls
+- npm test
+- npm run coveralls
