--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.3",
     "coveralls": "^3.0.9",
+    "eslint": "^6.8.0",
     "jest": "^24.9.0",
     "supertest": "^4.0.2"
   },
