edit travis config to make it run tests on docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,4 @@ before_install:
 install:
 - cd server; npm install
 script:
-- npm test
-- npm run coveralls
+    - docker-compose run server npm run coveralls
