--- a/grafana/provisioning/datasources/datasource.yml
+++ b/grafana/provisioning/datasources/datasource.yml
@@ -10,7 +10,7 @@ deleteDatasources:
 # whats available in the database
 datasources:
   # <string, required> name of the datasource. Required
-  - name: Influx
+  - name: InfluxDB
     # <string, required> datasource type. Required
     type: influxdb
     # <string, required> access mode. direct or proxy. Required
@@ -18,7 +18,7 @@ datasources:
     # <int> org id. will default to orgId 1 if not specified
     orgId: 1
     # <string> url
-    url: http://influxdb:8086
+    url: influxdb.server.vincipit.com
     # <string> database password, if used
     password: vivi
     # <string> database user, if used
