--- a/grafana/provisioning/datasources/datasource.yml
+++ b/grafana/provisioning/datasources/datasource.yml
@@ -18,7 +18,7 @@ datasources:
     # <int> org id. will default to orgId 1 if not specified
     orgId: 1
     # <string> url
-    url: influxdb.server.vincipit.com
+    url: https://influxdb.server.vincipit.com
     # <string> database password, if used
     password: vivi
     # <string> database user, if used
