--- a/utils/restart-docker.service
+++ b/utils/restart-docker.service
@@ -7,7 +7,7 @@ Type=simple
 Restart=on-failure
 RestartSec=1
 User=root
-ExecStart=sh {{EXEC_PATH}}/webhook-handler.sh
+ExecStart={{EXEC_PATH}}/webhook-handler.sh
 
 
 [Install]
