--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,7 +130,15 @@ services:
             - "traefik.http.routers.restart.tls.certresolver=le"
             - "traefik.http.routers.restart.entrypoints=secureweb"
             - "traefik.http.services.restart-svc.loadbalancer.server.port=4000"
-
+    rethink:
+        image: rethinkdb:2.4
+        volumes: 
+            - ./data/rethink:/data
+        labels: 
+            - "traefik.http.routers.rethink.rule=Host(`rethink-admin.${DOMAIN}`)"
+            - "traefik.http.routers.rethink.tls.certresolver=le"
+            - "traefik.http.routers.rethink.entrypoints=secureweb"
+            - "traefik.http.services.rethink-admin-svc.loadbalancer.server.port=8080"
 volumes:
     prometheus_data: {}
     grafana_data: {}
