--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "mongodb-memory-server": "^6.5.2",
     "mongoose": "^5.9.12",
     "morgan": "^1.10.0",
+    "rethinkdb": "^2.4.2",
     "rotating-file-stream": "^2.1.1",
     "socket.io": "^2.3.0"
   }
