--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
 
-version: "3.3"
+version: "3.8"
 
 services:
     traefik:
         image: "traefik:v2.2"
         restart: on-failure
         command:
-            # - --metrics.prometheus=true
-            # - --metrics.prometheus.buckets=0.1,0.3,1.2,5.0
             - --entrypoints.web.address=:80
             - --entrypoints.secureweb.address=:443
             - --providers.docker=true
@@ -26,7 +24,7 @@ services:
             - --accesslog=true
             - --accesslog.filepath=/logs/access.log
             - --accesslog.format=json
-        labels: 
+        labels:
             - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
             - "traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)"
             - "traefik.http.routers.redirs.entrypoints=web"
@@ -46,14 +44,14 @@ services:
     influxdb:
         image: influxdb:latest
         restart: on-failure
-        volumes: 
+        volumes:
             - ./data/influx:/var/lib/influxdb
-        environment: 
-            - INFLUXDB_DB=vivi 
+        environment:
+            - INFLUXDB_DB=vivi
             - INFLUXDB_USER=vivi
             - INFLUXDB_USER_PASSWORD=vivi
 
-        labels: 
+        labels:
             - "traefik.http.routers.influx-r.rule=Host(`influxdb.${DOMAIN:?err}`)"
             - "traefik.http.services.influx-svr.loadbalancer.server.port=8086"
             - "traefik.http.routers.influx-r.tls.certresolver=le"
@@ -64,7 +62,6 @@ services:
         depends_on:
             - influxdb
         volumes:
-            # - grafana_data:/var/lib/grafana
             - ./grafana/provisioning/:/etc/grafana/provisioning/:rw
         env_file:
             - ./grafana/config.monitoring
@@ -76,8 +73,7 @@ services:
             - "traefik.http.routers.grafana.tls.certresolver=le"
             - "traefik.http.routers.grafana.entrypoints=secureweb"
     server:
-        build: ./server
-        restart: on-failure
+        build: ./server2
         depends_on:
             - mongo
             - rethink
@@ -92,17 +88,6 @@ services:
             - "traefik.http.routers.server-api.entrypoints=secureweb"
         environment:
             - SUPER_ADMIN_ROLE_ID=5eeba89555a3a7607afe5d03
-              #admindb:
-              #build: "./adminMongo"
-              # ports: 
-              #        - "1234:1234"
-              #    depends_on:
-              #     - mongo
-              # labels:
-              #     - "traefik.http.routers.mongodb.rule=Host(`db.${DOMAIN:?err}`)"
-              #- "traefik.http.services.mongodb-svc.loadbalancer.server.port=1234"
-              #- "traefik.http.routers.mongodb.tls.certresolver=le"
-              #- "traefik.http.routers.mongodb.entrypoints=secureweb"
     mongo:
         image: mongo
         restart: always
@@ -110,24 +95,14 @@ services:
             - "27017:27017"
         volumes:
             - ./data/db:/data/db
-
-              #   restart-service:
-              # build: "./restart"
-              #volumes: 
-              # - ./restart.log:/restart.log
-              #labels:
-              #- "traefik.http.routers.restart.rule=Host(`restart.${DOMAIN:?err}`)"
-              #- "traefik.http.routers.restart.tls.certresolver=le"
-              #- "traefik.http.routers.restart.entrypoints=secureweb"
-              #- "traefik.http.services.restart-svc.loadbalancer.server.port=4000"
     rethink:
         image: rethinkdb:2.4
         restart: always
-        ports: 
+        ports:
             - "8081:8080"
-        volumes: 
+        volumes:
             - ./data/rethink:/data
-        labels: 
+        labels:
             - "traefik.http.routers.rethink.rule=Host(`rethink-admin.${DOMAIN:?err}`)"
             - "traefik.http.routers.rethink.tls.certresolver=le"
             - "traefik.http.routers.rethink.entrypoints=secureweb"
