--- a/server2/package.json
+++ b/server2/package.json
@@ -21,18 +21,22 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/jwt": "^7.0.0",
-    "@nestjs/mongoose": "^7.0.1",
-    "@nestjs/passport": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/swagger": "^4.5.11",
+    "@nestjs/common": "^7.3.2",
+    "@nestjs/core": "^7.3.2",
+    "@nestjs/jwt": "^7.1.0",
+    "@nestjs/mongoose": "^7.0.2",
+    "@nestjs/passport": "^7.1.0",
+    "@nestjs/platform-express": "^7.3.2",
+    "@nestjs/swagger": "^4.5.12",
+    "@types/rethinkdb": "^2.3.16",
     "bcrypt": "^5.0.0",
+    "helmet": "^3.23.3",
     "mongoose": "^5.9.19",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
+    "rethinkdb": "^2.4.2",
+    "rethinkdb-ts": "^2.4.2",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.4"
