--- a/godView/backend/package.json
+++ b/godView/backend/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "@nestjs/common": "^7.3.2",
     "@nestjs/core": "^7.3.2",
+    "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.3.2",
+    "@types/mongoose": "^5.7.30",
     "@types/node": "^14.0.20",
+    "mongoose": "^5.9.22",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.0"
   },
