--- a/godView/backend/package.json
+++ b/godView/backend/package.json
@@ -2,7 +2,11 @@
   "name": "godview",
   "version": "1.0.0",
   "description": "Vivi's godview",
-  "scripts": {},
+  "scripts": {
+    "start": "nest start",
+    "build": "nest build",
+    "start:build": "nest build && nest start"
+  },
   "dependencies": {
     "@nestjs/common": "^7.3.2",
     "@nestjs/core": "^7.3.2",
