--- a/server2/package.json
+++ b/server2/package.json
@@ -28,9 +28,11 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.3.2",
     "@nestjs/swagger": "^4.5.12",
+    "@types/lodash": "^4.14.159",
     "@types/rethinkdb": "^2.3.16",
     "bcrypt": "^5.0.0",
     "helmet": "^3.23.3",
+    "lodash": "^4.17.19",
     "mongoose": "^5.9.19",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
