--- a/server2/package.json
+++ b/server2/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.0.0",
     "helmet": "^3.23.3",
     "mongoose": "^5.9.19",
+    "nestjs-redoc": "^1.3.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
