--- a/server2/package.json
+++ b/server2/package.json
@@ -15,10 +15,10 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "DEBUG=true jest",
-    "test:watch": "DEBUG=true jest --watch",
-    "test:cov": "DEBUG=true jest --coverage",
+    "test:watch": "DEBUG=true jest --watch --runInBand",
+    "test:cov": "DEBUG=true jest --coverage --runInBand",
     "test:debug": "DEBUG=true node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "DEBUG=truejest --config ./test/jest-e2e.json"
+    "test:e2e": "DEBUG=truejest --config ./test/jest-e2e.json --runInBand"
   },
   "dependencies": {
     "@nestjs/common": "^7.3.2",
