--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
             - "traefik.http.routers.grafana.tls.certresolver=le"
             - "traefik.http.routers.grafana.entrypoints=secureweb"
     server:
-        build: ./server2
+        build: ./server
         depends_on:
             - mongo
             - rethink
