--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "DEBUG=true jest",
     "test:watch": "DEBUG=true jest --watch --runInBand",
-    "test:cov": "DEBUG=true jest --coverage --runInBand --forceExit && npm i coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js ", 
+    "test:cov": "DEBUG=true jest --coverage --coverageDirectory='coverage' --runInBand --forceExit && npm i coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js ", 
     "test:debug": "DEBUG=true node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "DEBUG=truejest --config ./test/jest-e2e.json --runInBand"
   },
