--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "DEBUG=true jest",
     "test:watch": "DEBUG=true jest --watch --runInBand",
-    "test:cov": "DEBUG=true jest --coverage --runInBand --forceExit && npm i coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js ", 
+    "test:cov": "DEBUG=true jest --coverage --runInBand --forceExit && coveralls < coverage/lcov.info", 
     "test:debug": "DEBUG=true node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "DEBUG=truejest --config ./test/jest-e2e.json --runInBand"
   },
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^4.5.12",
     "@types/rethinkdb": "^2.3.16",
     "bcrypt": "^5.0.0",
+    "coveralls": "^3.1.0",
     "helmet": "^3.23.3",
     "mongoose": "^5.9.19",
     "nestjs-redoc": "^1.3.1",
@@ -75,7 +76,7 @@
       "json",
       "ts"
     ],
-    "coverageDirectory":"./coverage",
+    "coverageDirectory":"/app/coverage",
     "collectCoverage":true,
     "rootDir": "src",
     "testRegex": ".spec.ts$",
