--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "DEBUG=true jest",
     "test:watch": "DEBUG=true jest --watch --runInBand",
-    "test:cov": "DEBUG=true jest --coverage --ci --runInBand --forceExit && codecov", 
+    "test:cov": "DEBUG=true jest --coverage --ci --runInBand --forceExit && bash < (curl -s https://codecov.io/bash)", 
     "test:debug": "DEBUG=true node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "DEBUG=truejest --config ./test/jest-e2e.json --runInBand"
   },
