--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ cache:
   directories:
   - node_modules
 script:
+    - npm i -g codecov
     - docker-compose run server npm run test:cov
+    - bash <(curl -s https://codecov.io/bash)
