--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "test": "DEBUG=true jest",
     "test:watch": "DEBUG=true jest --watch --runInBand",
     "test:cov": "DEBUG=true jest --coverage --ci --runInBand --forceExit", 
