--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
-sudo: false
 language: node_js
+os:
+  - 'linux'
 node_js:
-- '12'
+  - '12'
 branches:
   only:
-  - master
+  - '/.*/'
 services:
     - docker
 cache:
   directories:
   - node_modules
 script:
-    - npm i -g codecov
-    - docker-compose run server npm run test:cov
-    - bash <(curl -s https://codecov.io/bash)
+  - npm i -g codecov
+  - docker-compose run server npm run test:cov
+  - bash <(curl -s https://codecov.io/bash)
