--- a/server/package.json
+++ b/server/package.json
@@ -24,24 +24,25 @@
   "dependencies": {
     "@nestjs/common": "^7.3.2",
     "@nestjs/core": "^7.3.2",
-    "@nestjs/graphql": "^7.6.0",
+    "@nestjs/graphql": "^7.9.1",
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.3.2",
     "@nestjs/swagger": "^4.5.12",
     "@pusher/push-notifications-server": "^1.2.1",
-    "@types/rethinkdb": "^2.3.16",
+    "apollo-server-express": "^2.19.1",
     "bcrypt": "^5.0.0",
     "codecov": "^3.7.2",
+    "graphql": "^15.4.0",
+    "graphql-subscriptions": "^1.1.0",
+    "graphql-tools": "^7.0.2",
     "helmet": "^3.23.3",
     "mongoose": "^5.9.19",
     "nestjs-redoc": "^1.3.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rethinkdb": "^2.4.2",
-    "rethinkdb-ts": "^2.4.2",
     "rimraf": "^3.0.2",
     "swagger-ui-express": "^4.1.4"
   },
@@ -52,7 +53,6 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
     "@types/jest": "25.2.3",
-    "@types/mongoose": "^5.7.24",
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
