--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,9 @@ typings/
 # rollup.js default build output
 dist/
 
+# package-lock
+package-lock.json
+
 # Uncomment the public line if your project uses Gatsby
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # https://create-react-app.dev/docs/using-the-public-folder/#docsNav
