--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,8 @@
     "@nestjs/platform-express": "^7.6.5",
     "@nestjs/swagger": "^4.7.11",
     "@pusher/push-notifications-server": "^1.2.1",
+    "apollo-boost": "^0.4.9",
+    "apollo-link-http": "^1.5.17",
     "apollo-server-express": "^2.19.1",
     "bcrypt": "^5.0.0",
     "codecov": "^3.7.2",
@@ -40,6 +42,7 @@
     "helmet": "^3.23.3",
     "mongoose": "^5.9.19",
     "nestjs-redoc": "^1.3.1",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
