--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "apollo-link-http": "^1.5.17",
     "apollo-server-express": "^2.19.1",
     "bcrypt": "^5.0.0",
+    "chai-http": "^4.3.0",
     "codecov": "^3.7.2",
     "graphql": "^15.4.0",
     "graphql-subscriptions": "^1.1.0",
