--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
     "mongoose": "^5.9.19",
     "nestjs-redoc": "^1.3.1",
     "node-fetch": "^2.6.1",
+    "otplib": "^12.0.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
