--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "apollo-boost": "^0.4.9",
     "apollo-link-http": "^1.5.17",
     "apollo-server-express": "^2.19.1",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "chai-http": "^4.3.0",
     "codecov": "^3.7.2",
