[feat] add router/user association & eslint all the things

--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     }
   },
   "lint-staged": {
-    "**/*.ts": [
-      "eslint --fix"
+    "server/**/*.ts": [
+      "eslint --fix server/"
     ]
   },
   "validate-branch-name": {
-    "pattern":"^(master|^(feature|fix|experiment|improvement)\/([\\w-]+?)(\/\\d+)?)$",
-    "errorMsg":"Branch name format : //"
+    "pattern": "^(master|^(feature|fix|experiment|improvement)/([\\w-]+?)(/\\d+)?)$",
+    "errorMsg": "Branch name format : //"
   }
 }
