--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "validate-branch-name && lint-staged",
-      "pre-push": "sudo docker-compose run server npm run test:cov"
+      "pre-push": "sudo docker-compose build server && sudo docker-compose run server npm run test:cov"
     }
   },
   "lint-staged": {
