--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,7 @@ services:
     environment:
       - MONGO=mongo:27017
       - BEAMS_SECRET=A916C41C8136459EFB3F95AE73F8168CF124786715C4D5FD09F67F3438A41FD5
+      - BALENA_API_KEY=TnDNQstQf7hPgQa1pFTBCneWHUizC3Kj
   mongo:
     image: mongo
     restart: always
