--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,6 +4,8 @@ jobs:
   test:
     name: test backend build
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./server
     steps:
       - uses: actions/checkout@v2
 
@@ -12,6 +14,7 @@ jobs:
           node-version: '14.17.2'
 
       - run: yarn install
+        working-directory: ${{env.working-directory}}
 
       - name: test backend
         uses: mattallty/jest-github-action@v1
