--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,8 +14,5 @@ jobs:
         with:
           node-version: '14.17.2'
 
-      - run: yarn install
-        working-directory: ${{env.working-directory}}
-
-      - run: yarn test
-        working-directory: ${{env.working-directory}}
+      - run: docker-compose run server npm run test:cov
+        ${{env.working-directory}}
